Mostrar salas y jugadores
ME AYUDO CARLOS